# luc

./: CMakeLists.txt
scripts/: run.sh
source/luc/: CMakelists.txt
source/luc/lexer/: lexer.cc  lexer.h
source/luc/token/: token.cc  token.h
tools/: compile.cc
